--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "",
   "author": "",
   "scripts": {
-    "build": "parcel build index.html",
-    "dev": "parcel index.html --open",
+    "build": "parcel build tetris_base.html",
+    "dev": "parcel tetris_base.html --open",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
